fix(home/quality): use smaller font for heading on mobile

--- a/src/pages/home/ui/quality/quality.component.less
+++ b/src/pages/home/ui/quality/quality.component.less
@@ -14,6 +14,12 @@
   text-wrap-style: balance;
 
   h2 {
+    font: var(--tui-font-heading-2);
+    font-weight: 700;
     text-align: center;
+
+    @media @tui-mobile {
+      font: var(--tui-font-heading-3);
+    }
   }
 }
